# ROS

./: README.md
collision_avoidance/: package.xml  setup.py
collision_avoidance/collision_avoidance/: collision_avoidance_node.py
collision_avoidance/launch/: avoidance_launch.py
my_package/: CMakeLists.txt  package.xml
my_package/src/: publisher_node.cpp
my_python_package/: package.xml  setup.py
my_python_package/my_python_package/: my_python_node.py  subscriber_node.py
my_robot/: CMakeLists.txt  package.xml
my_robot/launch/: rover.launch.py
my_robot/urdf/: rover.urdf.xacro
robotsensor/: CMakeLists.txt  package.xml
robotsensor/config/: control.yaml
robotsensor/launch/: sensor.launch.py
robotsensor/urdf/: robot.urdf.xacro
robotsensor/worlds/: world.sdf
turtlesim_patrol/: CMakeLists.txt  package.xml  setup.py
turtlesim_patrol/turtlesim_patrol/: circle_patrol_client.py  circle_patrol_server.py
